# iOS_3D_Scanner

./: 3D_Scanner-Bridging-Header.h  CMakeLists.txt  Podfile  README.md  vtk_Wrapper.cpp  vtk_Wrapper.hpp
3D_Scanner/: AppDelegate.swift  CameraButton.swift  Info.plist  Main.storyboard  ScanningViewController.swift  SceneDelegate.swift  SurfaceExporter.swift  XYZStringFormatter.swift
3D_Scanner.xcodeproj/: project.pbxproj
Delaunay3D/: CMakeLists.txt
Delaunay3D/build1/: CMakeCache.txt  Makefile  cmake_install.cmake
Delaunay3D/build1/Delaunay3D.app/Contents/: Info.plist
Delaunay3D/build1/Delaunay3D.app/Contents/MacOS/: Delaunay3D
PCLWrapper/: PCLWrapper.cpp
lib/: libvtkChartsCore-8.90.1.dylib  libvtkChartsCore-8.90.8.90.0.dylib  libvtkChartsCore-8.90.dylib  libvtkCommonColor-8.90.1.dylib  libvtkCommonColor-8.90.8.90.0.dylib  libvtkCommonColor-8.90.dylib  libvtkCommonComputationalGeometry-8.90.1.dylib  libvtkCommonComputationalGeometry-8.90.8.90.0.dylib  libvtkCommonComputationalGeometry-8.90.dylib  libvtkCommonCore-8.90.1.dylib  libvtkCommonCore-8.90.dylib  libvtkCommonDataModel-8.90.1.dylib  libvtkCommonDataModel-8.90.dylib  libvtkCommonExecutionModel-8.90.1.dylib  libvtkCommonExecutionModel-8.90.8.90.0.dylib  libvtkCommonExecutionModel-8.90.dylib  libvtkCommonMath-8.90.1.dylib  libvtkCommonMath-8.90.8.90.0.dylib  libvtkCommonMath-8.90.dylib  libvtkCommonMisc-8.90.1.dylib  libvtkCommonMisc-8.90.8.90.0.dylib  libvtkCommonMisc-8.90.dylib  libvtkCommonSystem-8.90.1.dylib  libvtkCommonSystem-8.90.8.90.0.dylib  libvtkCommonSystem-8.90.dylib  (+355 more)
(+205 files in other folders)
